Apparently there is an overflow bug too

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 
 html{
     min-height: 100%;
+    max-width: 100%;
 }
 
 body{
